# Blockchain-payment-exchange

./: README.md
admin-service/: .gitignore  (+5 more)
api_contrib/: README.md  pyproject.toml  setup.py
api_contrib/api_contrib/core/: config.py
api_contrib/api_contrib/crud/: base_mongo.py
api_contrib/api_contrib/db/: client.py
api_contrib/api_contrib/schemas/: base.py
auth-service/app/: pyproject.toml
auth-service/app/app/: initial_data.py  main.py  utils.py
auth-service/app/app/api/: deps.py
auth-service/app/app/api/api_v1/: api.py
auth-service/app/app/core/: config.py  jwt.py  security.py  verify.py
auth-service/app/app/crud/: __init__.py  session.py  user.py
auth-service/app/app/db/: engine.py
auth-service/app/app/email-templates/: change_password_notification.html  reset_password.html  signup.html
auth-service/app/app/models/: keys.py  session.py  user.py
auth-service/app/app/schemas/: __init__.py  msg.py  session.py  token.py  user.py
auth-service/app/app/tests/: admin.py  api_key.py  conftest.py  root.py  sessions.py  user_profile.py
balance-service/app/: pyproject.toml
balance-service/app/app/: main.py  worker.py
balance-service/app/app/api/api_v1/: api.py
balance-service/app/app/api/internal/: celery.py  mq_publisher.py  tools.py
balance-service/app/app/balance/: lock.py  trade.py  transaction.py
balance-service/app/app/balance/base/: operations.py
balance-service/app/app/core/: config.py  contants.py  tools.py
balance-service/app/app/crud/: __init__.py  balance.py  entry.py
balance-service/app/app/db/: engine.py  migrate.py
balance-service/app/app/models/: __init__.py  balance.py  base.py  deposit.py  entry.py  withdrawal.py
balance-service/app/app/schemas/: __init__.py  balance.py  base.py  deposit.py  withdrawal.py
balance-service/app/app/tests/: conftest.py  test_api.py  test_api_internal.py  test_wallet_api.py
market-service/app/: .gitignore  pyproject.toml
market-service/app/app/: broker.py  main.py  robot.py  scheduler.py
market-service/app/app/api/api_v1/: api.py
market-service/app/app/connections/: background.py  mq.py  redis.py
market-service/app/app/core/: config.py  constants.py  tools.py
market-service/app/app/crud/: __init__.py  market.py  order.py  trade.py
market-service/app/app/db/: engine.py  init_db.py
market-service/app/app/market/core/: broker.py  depth.py  events.py  queues.py
market-service/app/app/market/k8s/: scaler.py  tools.py
market-service/app/app/models/: __init__.py  market.py  order.py  trade.py
market-service/app/app/schemas/: __init__.py  balance.py  base.py  market.py  order.py  trade.py
market-service/app/app/tasks/jobs/: robot.py  tools.py
market-service/app/app/tasks/worker/: balance.py
market-service/app/app/tests/: conftest.py  test_api_enpoints.py  test_core_tools.py  test_create_orders.py  test_events.py  test_execute_orders.py  test_tasks.py
wallet-service/app/: pyproject.toml  start_worker.sh  tests-start.sh
wallet-service/app/app/: initial_data.py  main.py  scheduler.py  worker.py
wallet-service/app/app/api/api_v1/: api.py
wallet-service/app/app/blockchain/: __init__.py
wallet-service/app/app/core/: config.py  connector.py  constants.py  tools.py
wallet-service/app/app/crud/: __init__.py  asset.py  deposit.py  transactions.py
wallet-service/app/app/db/: engine.py  init_db.py
wallet-service/app/app/models/: asset.py  base.py  blockchain.py  wallet.py
wallet-service/app/app/schemas/: __init__.py  asset.py  commission.py  internal.py  profile.py  wallet.py  withdrawal.py
wallet-service/app/app/stat/: fees.py  prices.py
wallet-service/app/app/tests/: conftest.py  tools.py
wallet-service/app/conf/: assets.json
(+243 files in other folders)
