[tool.poetry]
name = "wallet-service"
version = "0.1.1"
description = ""
authors = ["Ilya Davydov <razzor58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
uvicorn = ">=0.12.0,<0.14.0"
api-contrib = {git = "git@github.com:pymnts-exchange/api_contrib.git", branch="main"}
psycopg2-binary = "^2.8.6"
bitcoinlib = {git = "https://github.com/bullflag-company/bitcoinlib.git", rev = "reuse_db_connect"}
celery = {extras = ["redis"], version = "^5.0.5"}
APScheduler = "^3.7.0"
prometheus-client = "^0.10.1"
aiofiles = "^0.6.0"
web3 = "^5.20.0"
tenacity = "^8.0.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-dotenv = "^0.5.2"
eth-tester = "^0.5.0-beta.4"
mongomock = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
env_files = ".env"
testpaths = [
    "app/tests",
]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "app/tests/*",
    "app/tests/*"
]
